src/snapshots/pandalang__eval__tests__evals@add.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/app/add.panda
---
Int(
    Int {
        n: 5,
    },
)
