src/snapshots/pandalang__eval__tests__evals@add_assoc.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/add_assoc.panda
---
Int(
    Int {
        n: 15,
    },
)
