src/snapshots/pandalang__eval__tests__evals@add_int.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/add_int.panda
---
Expr(
    Int {
        n: 2,
    },
)
