src/snapshots/pandalang__eval__tests__evals@add_var.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/add_var.panda
---
Expr(
    Int {
        n: 9,
    },
)
