src/snapshots/pandalang__eval__tests__evals@div_int.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/div_int.panda
---
Expr(
    Int {
        n: 1,
    },
)
