src/snapshots/pandalang__eval__tests__evals@double_digit.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/int/double_digit.panda
---
Int(
    Int {
        n: 10,
    },
)
