src/snapshots/pandalang__eval__tests__evals@id.panda-2.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/fun/id.panda
---
Expr(
    Fun {
        arg: "x",
        body: Expr(
            Var {
                name: "x",
            },
        ),
    },
)
