src/snapshots/pandalang__eval__tests__evals@int.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/int/int.panda
---
Int(
    Int {
        n: 0,
    },
)
