src/snapshots/pandalang__eval__tests__evals@mul_int.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/bin_op/mul_int.panda
---
Expr(
    Int {
        n: 1,
    },
)
