src/snapshots/pandalang__eval__tests__evals@multi_letter.panda.snap
---
source: src/eval.rs
expression: source
input_file: src/snapshot_inputs/var/multi_letter.panda
---
Expr(
    Int {
        n: 3,
    },
)
